[workspace]
members = ["apps/sniper-bot", "crates/bot", "crates/core"]
resolver = "2"

[workspace.dependencies]
# ===== CORE =====
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
axum = "0.8.6"

# ===== SOLANA =====
solana-client = "2.3.13"
solana-sdk = "2.3.1"
solana-program = "2.3.0"

# ===== X402 =====
x402-rs = "0.9.1"
x402-reqwest = "0.4.0"
x402-axum = { version = "0.6", features = ["telemetry"] }

# ===== TELEGRAM =====
teloxide = "0.17.0"

# ===== DATABASE =====
sled = "0.34.7"

# ===== UTILS =====
anyhow = "1.0.100"
dotenvy = "0.15.7"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
thiserror = "2.0.17"
