[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
x402-rs = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[[example]]
name = "db_test"
path = "examples/db_test.rs"
